--- a/Front End Demo/html/GoogleMap/geolocation.html
+++ b/Front End Demo/html/GoogleMap/geolocation.html
@@ -15,22 +15,20 @@
 <script type="text/javascript">
 
     $(document).ready(function () {
-        alert("Document ready...");
         if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(locationSuccess, locationError,{
-                // 指示浏览器获取高精度的位置，默认为false
-                enableHighAcuracy: true,
-                // 指定获取地理位置的超时时间，默认不限时，单位为毫秒
-                timeout: 5000,
-                // 最长有效期，在重复获取地理位置时，此参数指定多久再次获取位置。
-                maximumAge: 3000
-            });
+            navigator.geolocation.getCurrentPosition(locationSuccess, locationFailed);
         }else{
             alert("Your browser does not support Geolocation!");
         }
     });
 
+    function locationSuccess() {
+        alert("Success");
+    }
 
+    function locationFailed() {
+        alert("Faile");
+    }
 
 
 </script>
