Add amplify js demo

--- a/front-end/html/Jquery/basic-use.html
+++ b/front-end/html/Jquery/basic-use.html
@@ -16,11 +16,12 @@
     <script type="text/javascript">
 
         $(document).ready(function () {
-            alert("Document ready...");
+            alert("document ready...");
         });
 
+        // one usage of head.js
         head.ready(function () {
-            alert("Head ready!!!");
+            alert("head ready!!!");
         });
 
 
