--- a/front-end/html/Vue/demo01-Introduction.html
+++ b/front-end/html/Vue/demo01-Introduction.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Evaluation Form Admin</title>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 </head>
-    <script type="text/javascript" src='../js/vue.js'></script>
-    <script type="text/javascript" src='../js/vue-resource.js'></script>
-    <script type="text/javascript" src='../js/jquery-2.0.3.js'></script>
-    <script type="text/javascript" src='../js/bootstrap.min.js'></script>
+    <script type="text/javascript" src='../../js/Vue/vue.js'></script>
+    <script type="text/javascript" src='../../js/Vue/vue-resource.js'></script>
+    <script type="text/javascript" src='../../js/jquery-2.0.3.js'></script>
+    <script type="text/javascript" src='../../js/bootstrap.min.js'></script>
 
 
     <style type="text/css"></style>
@@ -60,7 +60,7 @@
 
     </body>
 
-    <script type="text/javascript" src='../js/demo/demo01.js'></script>
+    <script type="text/javascript" src='../../js/demo/demo01.js'></script>
 
 </html>  
 
