--- a/front-end/html/Vue/demo02-Register Event.html
+++ b/front-end/html/Vue/demo02-Register Event.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8"> 
 		<title>Demo02: Register Event</title>
 	</head>
-	<script type="text/javascript" src='../js/vue.js'></script> 
-    <script type="text/javascript" src='../js/vue-resource.js'></script> 
-    <script type="text/javascript" src='../js/jquery-2.0.3.js'></script>
-    <script type="text/javascript" src='../js/bootstrap.min.js'></script>
+	<script type="text/javascript" src='../../js/Vue/vue.js'></script>
+    <script type="text/javascript" src='../../js/Vue/vue-resource.js'></script>
+    <script type="text/javascript" src='../../js/jquery-2.0.3.js'></script>
+    <script type="text/javascript" src='../../js/bootstrap.min.js'></script>
 
 	<body>
 		<h2>Demo02: Register Event</h2>
