--- a/front-end/html/Vue/demo03-List Rendering.html
+++ b/front-end/html/Vue/demo03-List Rendering.html
@@ -6,10 +6,10 @@
 		<title>List Rendering</title>
 	</head>
 
-	<script type="text/javascript" src='../js/vue.js'></script> 
-    <script type="text/javascript" src='../js/vue-resource.js'></script> 
-    <script type="text/javascript" src='../js/jquery-2.0.3.js'></script>
-    <script type="text/javascript" src='../js/bootstrap.min.js'></script>
+	<script type="text/javascript" src='../../js/Vue/vue.js'></script>
+    <script type="text/javascript" src='../../js/Vue/vue-resource.js'></script>
+    <script type="text/javascript" src='../../js/jquery-2.0.3.js'></script>
+    <script type="text/javascript" src='../../js/bootstrap.min.js'></script>
 	
 	<body>
 
