--- a/front-end/html/Jquery/basic-use.html
+++ b/front-end/html/Jquery/basic-use.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8">
         <title>Jquery Basic Use</title>
         <link rel="stylesheet" type="text/css" href="../css/testChromeDevTools.css">
+        <style>
+
+            #test:before {
+                content: 'Before ';
+                color: #FF0;
+            }
+
+        </style>
     </head>
     <body>
 
@@ -12,8 +20,40 @@
         <a href="demo.html">Goto Baidu</a>
 
         <button class="change">Change content</button>
+        <button class="reverse">Reverse content</button>
 
         <h3 class="content">You will never have what you like until you learn to like what you have.</h3>
+
+        <iframe id="editor" src="demo.html"></iframe>
+
+        <div id="test">Test content</div>
+
+        <h2>Event Model</h2>
+
+        <div id="div-parent">
+            This is DIV
+            <div id="div-son">This is DIV 2</div>
+            <p id="p-son">This is P</p>
+
+        </div>
+
+        <form>
+            First Name: <input type="text" required oninvalid="console.log('invalid input')" />
+            Last Name: <input type="text"/>
+            <button type="submit">提交</button>
+        </form>
+
+        <p id="testDragEvent" draggable="true">This is the test for drag event</p>
+
+        <div class="dropzone">
+            初始位置
+            <div id="draggable" draggable="true">
+                该节点可拖拉
+            </div>
+        </div>
+        <div class="dropzone">能拖拉位置1</div>
+        <div class="dropzone">能拖拉位置2</div>
+        <div class="nodropzone">不能拖拉</div>
 
     </body>
 
@@ -23,24 +63,25 @@
         $(document).ready(function () {
             // alert("document ready...");
 
+            window.addEventListener('unload', function(event) {
+                var confirmationMessage = '确认关闭窗口？';
+
+                e.returnValue = confirmationMessage;
+                return confirmationMessage;
+            });
+
             function changeContent(msg) {
                 $(".content").html(msg);
-                window.history.pushState("cart-url-state", null, window.location.pathname)
             }
 
-            $(".change").on("click", changeContent);
+            $(".change").on("click", function () {changeContent("Oops!")});
 
-            // window.onpageshow = function (ev) {
-            //     alert("page show:"+ev.persisted);
-            // }
+            $(".reverse").on("click", function () {
+                $(".content").html("You will never have what you like until you learn to like what you have.");
+            });
 
-            //
-            // if (window.history && window.history.pushState) {
-            //     $(window).on('popstate', function (e) {
-            //         console.log("plp-url-state");
-            //         changeContent();
-            //     });
-            // }
+            var editor = document.getElementById('editor');
+            editor.contentDocument.designMode = 'on';
 
 
             $(window).on("pageshow", function (e) {
@@ -52,16 +93,89 @@
                 }
             });
 
-            window.onpopstate = function (e) {
-                console.log(e.state);
-                changeContent("This is popstate event");
-                if (e.state === "cart-url-state") {
 
-                }
+            var observer = new MutationObserver(function (mutations, observer) {
+                mutations.forEach(function(mutation) {
+                    console.log("DOM updated");
+                    console.log(mutation);
+                });
+            });
 
+            var  options = {
+                'childList': true,
+                'attributes': true,
+                'characterData': true
             }
-            // window.history.pushState('forward', null, '#'); //在IE中必须得有这两行
-            // window.history.forward(1);
+
+            observer.observe($(".content")[0], options);
+
+            document.getElementById("p-son").addEventListener("click", function (e) {
+                console.log("click p at bubbling case..............");
+            });
+
+            document.getElementById("p-son").addEventListener("click", function (e) {
+                console.log("click p at capture case..............");
+            }, true );
+
+            document.getElementById("div-parent").addEventListener("click", function (e) {
+                console.log("click div parent at capture case..............");
+                e.stopPropagation();
+            }, true);
+
+            $("#testDragEvent").on("dragstart", function () {
+                this.style.backgroundColor = "red";
+            });
+
+            $("#testDragEvent").on("dragend", function () {
+                this.style.backgroundColor = "green";
+            });
+
+            // 被拖拉节点
+            var dragged;
+
+            document.addEventListener('dragstart', function (event) {
+                // 保存被拖拉节点
+                dragged = event.target;
+                // 被拖拉节点的背景色变透明
+                event.target.style.opacity = 0.5;
+            }, false);
+
+            document.addEventListener('dragend', function (event) {
+                // 被拖拉节点的背景色恢复正常
+                event.target.style.opacity = '';
+            }, false);
+
+            document.addEventListener('dragover', function (event) {
+                // 防止拖拉效果被重置，允许被拖拉的节点放入目标节点
+                event.preventDefault();
+            }, false);
+
+            document.addEventListener('dragenter', function (event) {
+                // 目标节点的背景色变紫色
+                // 由于该事件会冒泡，所以要过滤节点
+                if (event.target.className === 'dropzone') {
+                    event.target.style.background = 'purple';
+                }
+            }, false);
+
+            document.addEventListener('dragleave', function( event ) {
+                // 目标节点的背景色恢复原样
+                if (event.target.className === 'dropzone') {
+                    event.target.style.background = '';
+                }
+            }, false);
+
+            document.addEventListener('drop', function( event ) {
+                // 防止事件默认行为（比如某些元素节点上可以打开链接），
+                event.preventDefault();
+                if (event.target.className === 'dropzone') {
+                    // 恢复目标节点背景色
+                    event.target.style.background = '';
+                    // 将被拖拉节点插入目标节点
+                    dragged.parentNode.removeChild(dragged);
+                    event.target.appendChild( dragged );
+                }
+            }, false);
 
         });
 
